sass/_unittest.scss
/* WordPress Core
===================*/
body {
  -ms-word-wrap: break-word;
  word-wrap: break-word;
  overflow-x: hidden;
}
dl, ol, ul {
  margin-top: 0;
  margin-bottom: 25px;
}
ol {
  padding-left: 20px;
}

ul {
  list-style: disc;
  padding-left: 20px;
}
/* Protected Post Type */
.post-password-form {
  label {
    width: 100%;
    display: block;
    font-weight: 600;
    margin-bottom: 10px;
  }
  input[type="password"] {
    font-size: 1.2rem;
    line-height: 20px;
    padding: 12px 20px;
    border: 1px solid #E4E4F2;
    width: 100%;
  }
  input[type="submit"] {
    background-color: $primary-color ;
    border: none;
    padding: 10px 40px;
    color: $white;
    cursor: pointer;
    font-weight: 600;
    @include transition;

    &:hover {
      background-color: $secondary-color;
    }
  }
}

/* Table */
table {
  margin-bottom: 20px;
  width: 100%;

  caption {
    border: 1px solid #dfe2e9;
    padding: 6px 10px;
    border-top: 0;
  }
  th,
  td,
  {
    background-color: transparent;
    border: 1px solid #dfe2e9;
    text-align: center;
    padding: 8px;
    transition: .3s;

    &#today {
      background: $primary-color;
      color: $white;

      a {
        color: $white;
      }
    }
  }
}
// Page Content Unit Test
.page-content {
  .size-full.alignright {
    margin-bottom: 15px;
    margin-top: 20px;
  }
  figure.wp-caption.aligncenter {
    margin-top: 40px;
  }

  dl, ol, ul {
    margin-bottom: 11px;
  }
  .comment-respond {
    margin-top: 94px;
    margin-bottom: 20px;
  }
  .latest-comments {
    .comment-respond {
      margin-bottom: 40px;
    }
  }
}


/* Text meant only for screen readers. */
.screen-reader-text {
  border: 0;
  clip: rect(1px, 1px, 1px, 1px);
  clip-path: inset(50%);
  height: 1px;
  margin: -1px;
  overflow: hidden;
  padding: 0;
  position: absolute !important;
  width: 1px;
  word-wrap: normal !important; /* Many screen reader and browser combinations announce broken words as they would appear visually. */
}

.screen-reader-text:focus {
  background-color: #eee;
  clip: auto !important;
  clip-path: none;
  color: #444;
  display: block;
  font-size: 1em;
  height: auto;
  left: 5px;
  line-height: normal;
  padding: 15px 23px 14px;
  text-decoration: none;
  top: 5px;
  width: auto;
  z-index: 100000;
}


/*
 Caption
============================*/
.wp-caption {
  margin-bottom: 1.5em;
  max-width: 100%;
}

.wp-caption img[class*="wp-image-"] {
  display: block;
  margin-left: auto;
  margin-right: auto;
}

.wp-caption .wp-caption-text {
  margin: 0.8075em 0;
  font-size: 14px;
  font-style: italic;
}

.wp-caption-text {
  text-align: center;
}

/*
 Galleries
============================*/
.gallery {
  margin-bottom: 10px;
}

.gallery-item {
  display: inline-block;
  max-width: 33.33%;
  text-align: center;
  vertical-align: top;
  width: 100%;
  padding-right: 5px !important;
}

.gallery-columns-1 .gallery-item {
  max-width: 100%;
  width: 100%;
}

.gallery-columns-2 .gallery-item {
  max-width: 50%;
}

.gallery-columns-3 .gallery-item {
  max-width: 33.33%;
}

.gallery-columns-4 .gallery-item {
  max-width: 25%;
}

.gallery-columns-5 .gallery-item {
  max-width: 20%;
}

.gallery-columns-6 .gallery-item {
  max-width: 16.66%;
}

.gallery-columns-7 .gallery-item {
  max-width: 14.28%;
}

.gallery-columns-8 .gallery-item {
  max-width: 12.5%;
}

.gallery-columns-9 .gallery-item {
  max-width: 11.11%;
}

.gallery-caption {
  display: block;
}
.size-thumbnail {
  margin-bottom: 20px;
}

img {
  &.emoji {
    width: 15px;
    height: 15px;
  }
}
/*
 Alignments
============================*/
.alignleft {
  display: inline;
  float: left;
  margin-right: 1.5em !important;
}

.alignright {
  display: inline;
  float: right;
  margin-left: 1.5em !important;
}

.aligncenter {
  clear: both;
  display: block;
  margin-left: auto !important;
  margin-right: auto !important;
  text-align: center;
}
/*
 Block Unit Test Widget
============================*/
.wp-block-search__input {
  border: 1px solid #dfe2e9 !important;
}
.wp-block-search__button {
  margin-left: 0 !important;
}
.wp-block-social-links {
  padding-left: 0 !important;

  li {
    padding-top: 0 !important;
  }
}
// Blockquote
.single-post-item {
  &.format-quote {
    blockquote {
      padding: 45px;

      @include rmaxwd(767) {
        padding: 35px;
      }
    }
  }
}
/* ... */

